Fixed issue with about page text overflow

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -32,13 +32,17 @@ h3 {
   margin: 25px 0 5px;
 }
 
+.text {
+  overflow: visible;
+}
+
 .full-body-text {
   line-height: 16px;
   margin-top: 0;
   display: table;
   width: 100%;
   height: 100%;
-  padding: 150px;
+  padding: 100px 150px 30px;
   p {
     margin: 10px 0;
     color: #555;
