--- a/source/stylesheets/nav.scss
+++ b/source/stylesheets/nav.scss
@@ -1,5 +1,5 @@
 .nav {
-  position: absolute;
+  position: fixed;
   top: 80px;
   left: 0;
   z-index: 30;
